Style : Avoid line break in calendar title on small screens

--- a/templates/default/styles/default.css
+++ b/templates/default/styles/default.css
@@ -190,7 +190,7 @@ td {
     color:green;
 }
 #calendarBox, #calendarKey {
-    width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
